# fedem-solvers

./: .gitmodules  CMakeLists.txt
.github/scripts/: build_doc.sh
.github/workflows/: build_doc.yml  build_fmu.yml  build_solvers.yml
.reuse/: dep5
FMU/: CMakeLists.txt
PythonAPI/doc/source/: conf.py
PythonAPI/src/fedempy/: exporter.py  fmm_solver.py  modeler.py  reducer.py  solver.py
src/: CMakeLists.txt  Doxyfile.solver.in
src/FMU/: CMakeLists.txt  fmu2.C  fmu3.C
src/Femlib/: qbek.f
src/SolutionMapper/: CMakeLists.txt  main.C
src/vpmCommon/: supElTypeModule.f90
src/vpmReducer/vpmReducerTests/: testModels.C  (+3 more)
src/vpmSolver/: CMakeLists.txt  contactElementRoutinesModule.f90  contactElementTypeModule.f90  controlRoutinesModule.f90  controlStructModule.f90  controlTypeModule.f90  energyInt.f90  engineRoutinesModule.f90  finiteElementModule.f90  forceRoutinesModule.f90  frictionRoutinesModule.f90  frictionTypeModule.f90  functionTypeModule.f90  initiateContactElmTypeModule.f90  initiateFunctionTypeModule.f90  initiateJointTypeModule.f90  initiateModesTypeModule.f90  initiateModule.f90  initiateSpringTypeModule.f90  initiateSupElTypeModule.f90  masterSlaveJointRoutinesModule.f90  masterSlaveJointTypeModule.f90  modesRoutinesModule.f90  modesTypeModule.f90  newmarkRoutinesModule.f90  restartModule.f90  samSolverModule.f90  sensorTypeModule.f90  solverInterface.C  solverModule.f90  solverRoutinesModule.f90  springTypeModule.f90  staticEquilibriumModule.f90  supElRoutinesModule.f90
src/vpmStress/: elStressModule.f90
src/vpmUtilities/: manipMatrixModule.f90
(+5 files in other folders)
